# scrooge

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  dev.py  pyproject.toml  settings.yaml
app/: app.py  auth.py  consts.py  container.py  db.py  errors.py  logging.py  main.py  models.py  services.py  settings.py  tinkoff_csv.py  utils.py
app/adapters/zenmoney/: __init__.py  parser.py  schemas.py
app/controllers/: home.py  login.py  register.py
app/db/: __init__.py  accounts.py  base.py  categories.py  columns.py  transactions.py  users.py  workspaces.py
app/domains/: __init__.py
app/domains/accounts/: __init__.py  consts.py  internals.py  schemas.py  service.py
app/domains/categories/: __init__.py  consts.py  internals.py  schemas.py  service.py
app/domains/transactions/: __init__.py  internals.py  schemas.py  service.py
app/domains/users/: __init__.py  internals.py  schemas.py  service.py
app/domains/workspaces/: __init__.py  internals.py  schemas.py  service.py
app/infra/bot/: bot.py  context.py  deps.py  events.py  main.py  middlewares.py  routes.py  states.py
app/infra/bot/handlers/: __init__.py  main.py  transactions.py
app/infra/web/: deps.py  error_handlers.py  events.py  main.py  routes.py  schemas.py  security.py
app/models/: __init__.py  accounts.py  base.py  categories.py  core.py  transactions.py  users.py  workspaces.py
app/repositories/: __init__.py  accounts.py  base.py  categories.py  container.py  exceptions.py  sql.py  transactions.py  users.py  workspaces.py
app/routes/: __init__.py  transactions.py
app/settings/: __init__.py  app.py  base.py
app/templates/web/: base.html  footer.html  header.html  index.html  login.html
app/templates/web/macro/: forms.html
app/utils/: __init__.py  parsing.py
app/views/: layout.jinja
app/views/home/: index.jinja
app/views/login/: index.jinja
app/views/partial/: footer.jinja  header.jinja
app/views/register/: index.jinja
cmd/: run_bot.py  run_web.py
data/sql/: columns.py  db_models.py  models.py  services.py  users.py
domain/: common.py  passwords.py  services.py  users.py
libs/: context.py
migrations/: env.py
migrations/versions/: 2022-09-27_60e8d20b652f_add_users_and_telegram_users.py  2022-09-28_5ff97cdbec58_add_workspaces_and_categories_table.py  2022-10-01_cf3f91161c60_add_accounts_table.py  2022-10-10_c5eabe8f5e05_add_transactions.py  2022-12-30_e350e0c27238_add_users_first_name_last_name_avatar_.py  2023-11-06_021b4b436a7b_init.py
scripts/: export_from_zm_dump.py
templates/: footer.html  header.html  index.html  layout.html
templates/transactions/: index.html
templates/transactions/partial/: sorted_transactions.html  unsorted_transactions.html
