[tool.poetry]
name = "scrooge"
version = "0.1.0"
description = ""
authors = ["Vlad Pastushenko <iam@vladpi.me>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.1"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
fastapi = "^0.82.0"
fastapi-security-telegram-webhook = "^0.2.0"
gunicorn = "^20.1.0"
uvicorn = "^0.18.3"
aioredis = "^2.0.1"
colorlog = "^6.7.0"
psycopg2 = "^2.9.3"
dateparser = "^1.1.1"
fastapi-login = "^1.8.3"
Jinja2 = "^3.1.2"
Starlette-WTF = "^0.4.3"
aiogram = "3.0.0b6"
redis = "^4.4.0"
rodi = "^2.0.0"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.2"}

[tool.poetry.dev-dependencies]
mypy = "^1.0"
flake8 = "^4"
flake8-quotes = "^3.3.1"
black = "^22.8.0"
isort = "^5.10.1"
wemake-python-styleguide = "^0.16.1"
pre-commit = "^2.20.0"
flake8-annotations = "^2.9.1"
types-dateparser = "^1.1.4"
types-redis = "^4.3.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
ignore_missing_imports = true
follow_imports = "normal"
check_untyped_defs = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
show_error_codes = true