[tool.poetry]
name = "scrooge"
version = "0.1.0"
description = ""
authors = ["Vlad Pastushenko <iam@vladpi.me>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "0.22.0"
Jinja2 = "3.1.2"
blacksheep = {version = "2.0a11", extras = ["full"]}
uvloop = "^0.19.0"
essentials-configuration = {extras = ["full"], version = "^2.0.3"}
markupsafe = "2.1.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.12.1"
psycopg2 = "^2.9.9"
pydantic = {extras = ["dotenv"], version = "^2.4.2"}
colorlog = "^6.7.0"
mypy = "^1.6.1"
flake8 = "^6.1.0"
flake8-annotations = "^3.0.1"
black = "^23.10.1"
isort = "^5.12.0"
guardpost = "^1.0.2"

[tool.poetry.group.dev.dependencies]
blacksheep-cli = "^0.0.4"
mypy = "^1.6.1"
flake8 = "^6.1.0"
flake8-annotations = "^3.0.1"
black = "^23.10.1"
isort = "^5.12.0"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
ignore_missing_imports = true
follow_imports = "normal"
check_untyped_defs = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
show_error_codes = true