[project]
name = "scrooge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "litestar[jinja,sqlalchemy,standard]>=2.12.1",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = ["ruff>=0.6.6", "sqlalchemy[mypy]>=2.0.35"]

[tool.ruff]
line-length = 120

# [tool.mypy]
# plugins = "sqlalchemy.ext.mypy.plugin"
